--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-native-reanimated": "~1.4.0",
     "react-native-web": "~0.11.7",
     "react-navigation": "^4.0.10",
+    "react-navigation-drawer": "^2.3.3",
     "react-navigation-stack": "1.10.3",
     "react-navigation-tabs": "^2.7.0",
     "rn-fetch-blob": "^0.12.0"
