--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "react-navigation-drawer": "^2.3.3",
     "react-navigation-stack": "1.10.3",
     "react-navigation-tabs": "^2.7.0",
-    "rn-fetch-blob": "^0.12.0"
+    "rn-fetch-blob": "^0.12.0",
+    "expo-barcode-scanner": "~8.0.0"
   },
   "devDependencies": {
     "babel-preset-expo": "~8.0.0",
