--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-native-keyboard-aware-scroll-view": "^0.9.1",
     "react-native-picker-select": "^6.5.0",
     "react-native-reanimated": "~1.4.0",
+    "react-native-simple-radio-button": "^2.7.4",
     "react-native-web": "~0.11.7",
     "react-navigation": "^4.0.10",
     "react-navigation-drawer": "^2.3.3",
